# slv

./: .editorconfig  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
cmd/: Cargo.toml
cmd/src/: main.rs
input/: Cargo.toml
input/src/: index.rs  lib.rs  session.rs  source.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  options.rs  session.rs  ws.rs
tui/: Cargo.toml
tui/src/: lib.rs
