[package]
name = "slv-client"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SOF3/slv"
homepage = "https://github.com/SOF3/slv"
description = "Generalized library for slv clients"
license = "Apache-2.0"

[dependencies]
arcstr = {version = "1.1.4", features = ["serde"]}
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0.31"
parking_lot = "0.12.1"
arc-swap = "1.5.1"

[dependencies.tokio]
version = "1.19.2"
default-features = false

[dependencies.slv-proto]
version = "0.1.0"
path = "../proto"
