[package]
name = "slv"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SOF3/yankd"
homepage = "https://github.com/SOF3/yankd"
description = "Structured log viewer"
license = "Apache-2.0"

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0.31"
tui = "0.19.0"

[dependencies.tokio]
version = "1.19.2"
default-features = false
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.slv-input]
version = "0.1.0"
path = "../input"

[dependencies.slv-server]
version = "0.1.0"
path = "../server"
