[package]
name = "slv-tui"
authors = ["SOFe <sofe2038@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SOF3/yankd"
homepage = "https://github.com/SOF3/yankd"
description = "WebSocket server for SLV"
license = "Apache-2.0"

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
crossterm = {version = "0.25.0", features = ["event-stream"]}
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0.31"
tui = "0.19.0"

[dependencies.tokio]
version = "1.19.2"
default-features = false

[dependencies.slv-proto]
version = "0.1.0"
path = "../proto"

[dependencies.slv-client]
version = "0.1.0"
path = "../client"

[dependencies.slv-input]
version = "0.1.0"
path = "../input"
